fix: update swagger doc
